# axterminator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  glama.json  llms.txt  mkdocs.yml  pyproject.toml  run-mcp.sh  rust-toolchain.toml  server.py  smithery.yaml
.github/: dependabot.yml  osv-scanner.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  demo.yml  docs.yml  release.yml  security.yml
SYNC_ENGINE/: index.html
api/config/: index.html
api/element/: index.html
api/mcp-tools/: index.html
benches/: ax_vs_vision.rs  bench_quick.rs  element_access.rs
benches/probes/: README.md
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
crates/axterminator-core/: Cargo.toml  LICENSE
crates/axterminator-core/src/: element.rs  error.rs  lib.rs
demo/: README.md  demo.tape  demo_script.py
docs/: DESIGN.md  SYNC_ENGINE.md  axterminator-design-doc.md  axterminator-patent-claims.md  comparison.md  directory-submissions.md  index.md  performance.md
docs/api/: config.md  core.md  element.md  mcp-tools.md
docs/architecture/: 2026-05-19-mik-4379-vlm-tier1.md  instruction-sources.md
docs/architecture/decisions/: ADR-0001-ax-first-with-vision-fallback.md
docs/assets/js/: webmcp.js
docs/design/: MCP_SERVER_DESIGN.md
docs/getting-started/: installation.md  permissions.md  quickstart.md
docs/guide/: actions.md  audio.md  camera.md  finding-elements.md  self-healing.md  spaces.md  vlm.md
docs/internal/: ACCESSIBILITY_FFI_IMPLEMENTATION.md  HEALING_IMPLEMENTATION.md  HEALING_QUICK_REF.md  USAGE_EXAMPLES.md
docs/launch/: RELEASE_CHECKLIST.md  blog-post-draft.md  hackernews.md  reddit_python.md  reddit_rust.md
docs/portfolio/supercharge/: cogagent-stack-2026.md  glm-5v-autoclaw-runtime-2026.md  grok-stt-tts-voice-benchmark-2026.md  ui-tars-2-axterminator-2026.md
examples/: finder_automation.py  notes_app.py  pytest_example.py  system_preferences.py  textedit_automation.py  vlm_visual_detection.py
getting-started/installation/: index.html
getting-started/permissions/: index.html
getting-started/quickstart/: index.html
guide/actions/: index.html
guide/audio/: index.html
guide/self-healing/: index.html
internal/HEALING_IMPLEMENTATION/: index.html
internal/HEALING_QUICK_REF/: index.html
internal/USAGE_EXAMPLES/: index.html
launch/RELEASE_CHECKLIST/: index.html
launch/hackernews/: index.html
npm/: README.md  package.json
performance/: index.html
python/axterminator/: __init__.py  __init__.pyi  vlm.py
python/tests/: conftest.py  test_actions.py  test_cli.py  test_connection.py  test_elements.py  test_integration.py  test_pytest_plugin.py  test_recorder.py  test_sync.py  test_vlm.py
resources/: Info.plist
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/DESIGN/: index.html
site/DESIGN/MCP_SERVER_DESIGN/: index.html
site/api/core/: index.html
site/axterminator-design-doc/: index.html
site/axterminator-patent-claims/: index.html
site/comparison/: index.html
site/guide/camera/: index.html
site/guide/finding-elements/: index.html
site/guide/spaces/: index.html
site/guide/vlm/: index.html
site/internal/ACCESSIBILITY_FFI_IMPLEMENTATION/: index.html
site/internal/IMPLEMENTATION_SUMMARY/: index.html
site/launch/blog-post-draft/: index.html
site/launch/reddit_python/: index.html
site/launch/reddit_rust/: index.html
src/: accessibility.rs  actions.rs  app.rs  audio.rs  blackbox.rs  cache.rs  camera.rs  camera_objc.m  copilot.rs  copilot_extract.rs  copilot_format.rs  copilot_state.rs  cross_app.rs  display.rs  docker_browser.rs  durable_steps.rs  electron_cdp.rs  electron_profiles.rs  element.rs  error.rs  healing.rs  healing_match.rs  instruction_sources.rs  intent.rs  intent_matching.rs  lib.rs  ocr.rs  ocr_objc.m  persistent_refs.rs  recording.rs  router.rs  scene.rs  sck_audio_objc.m  semantic_find.rs  spaces.rs  supercharge.rs  sync.rs  test_sync.rs  triple_understanding.rs  upgrade.rs
src/audio/: capture.rs  devices.rs  ffi.rs  mod.rs  parakeet.rs  sck_capture.rs  speech.rs  tts_models.rs  vad.rs
src/camera/: capture.rs  gesture.rs  mod.rs  tests.rs
src/capture/: mod.rs  screen_diff.rs
src/context/: clipboard.rs  location.rs  mod.rs  system.rs
src/mcp/: action_safety.rs  analysis_engine.rs  annotations.rs  args.rs  auth.rs  catalog.rs  elicitation.rs  elicitation_tests.rs  guide_audio.md  guide_patterns.md  guide_quickstart.md  logging.rs  mod.rs  observer.rs  progress.rs  prompts.rs  protocol.rs  resources.rs  resources_read.rs  sampling.rs  security.rs  server.rs  server_handlers.rs  server_tests.rs  test_support.rs  tools.rs  tools_audio.rs  tools_camera.rs  tools_capture.rs  tools_context.rs  tools_docker.rs  tools_error.rs  tools_extended.rs  tools_gui.rs  tools_gui_events.rs  tools_handlers.rs  tools_innovation.rs  tools_power.rs  tools_response.rs  tools_spaces.rs  (+8 more)
src/mcp/tools_innovation/: analysis.rs  mod.rs  tests.rs  workflow.rs
src/watch/: audio_watcher.rs  camera_watcher.rs  mod.rs  ring_buffer.rs
tests/: directory_listing_metadata.test.mjs  directory_listing_tests.rs  glm_5v_autoclaw_runtime.rs  grok_stt_tts_voice_benchmark.rs  supercharge_cogagent_stack.rs  test_copilot_state.rs  test_intent.rs  ui_tars_2_axterminator_supercharge.rs
