[package]
name = "axterminator"
version = "0.6.1"
edition = "2021"
authors = ["Mikko Parkkola <mikko.parkkola@iki.fi>"]
description = "macOS GUI testing framework with background testing, sub-millisecond element access, and self-healing locators"
homepage = "https://mikkoparkkola.github.io/axterminator/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MikkoParkkola/axterminator"
documentation = "https://github.com/MikkoParkkola/axterminator#readme"
readme = "README.md"
keywords = ["macos", "gui", "testing", "accessibility", "automation"]
categories = ["development-tools::testing", "gui", "os::macos-apis"]
exclude = [".claude/", ".github/", "docs/", "python/", "tests/", "benches/", "examples/"]

[lib]
name = "axterminator"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "axterminator"
path = "src/bin/axterminator.rs"
required-features = ["cli"]

[features]
# NOTE: `python-ext` is intentionally NOT in `default`.
# - The cdylib (Python extension) is built by maturin/pip, which passes
#   --features python-ext explicitly (see .cargo/config.toml or pyproject.toml).
# - The standalone CLI binary is built with `cargo build --bin axterminator`
#   (default features = cli only), which links Python explicitly via build.rs.
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete"]
# spaces: virtual desktop management via CGSSpace private SPI.
# Off by default — private API, macOS 14+ tested, incompatible with App Store.
spaces = []
# python-ext: enables the `extension-module` linker flag that defers Python symbol
# resolution to the embedding interpreter at runtime.  Must be DISABLED when
# building the standalone CLI binary (which links Python explicitly via build.rs).
python-ext = ["pyo3/extension-module"]
# http-transport: Streamable HTTP + SSE transport (axum, tokio-stream).
# Feature-gated to keep the default CLI binary lean.
http-transport = ["dep:axum", "dep:tokio-stream", "dep:rand"]
# audio: on-device audio capture, speech recognition, and TTS via CoreAudio /
# Speech.framework / AVFoundation.  Off by default to avoid triggering macOS
# TCC permission dialogs for users who do not need audio capabilities.
audio = []
# camera: single-frame AVFoundation capture + on-device Vision gesture detection.
# Compiles src/camera_objc.m and links AVFoundation, Vision, CoreImage, ImageIO,
# CoreMedia, CoreVideo.  Off by default — enables only when camera input is needed
# to avoid triggering TCC permission dialogs on first run.
camera = []
# watch: continuous background monitoring — audio VAD + camera gesture detection.
# Pushes events to Claude Code sessions via MCP notifications/claude/channel.
# Implies audio + camera + tokio/time. Off by default.
watch = ["audio", "camera", "dep:tokio-util"]

[dependencies]
# Python bindings (abi3-py39 for forward compatibility with Python 3.14+)
# extension-module is gated via the python-ext feature — see build.rs and [features]
pyo3 = { version = "0.28", features = ["abi3-py39"] }

# CLI (feature-gated so it's only compiled for the binary target)
clap = { version = "4.5", features = ["derive", "wrap_help", "env"], optional = true }
clap_complete = { version = "4.5", optional = true }

# HTTP transport (feature-gated)
axum = { version = "0.8", features = ["http1", "http2", "json", "tokio"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
rand = { version = "0.10", optional = true }

# Base64 encoding for screenshot data
base64 = "0.22"

# macOS accessibility
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = { version = "0.25", features = ["elcapitan", "highsierra"] }
core-graphics-types = "0.2"

# macOS specific
objc = "0.2"
cocoa = "0.26"
block = "0.1"

# Async runtime
tokio = { version = "1.44", features = ["full"] }
# CancellationToken for cooperative task shutdown (watch feature)
tokio-util = { version = "0.7", features = ["rt"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Caching
lru = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket for Chrome DevTools Protocol
tungstenite = "0.29"

# Process inspection
sysinfo = "0.38"

# URL parsing
url = "2.5"

# Hashing for tree comparison
ahash = "0.8"

# Regex for query parsing
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
criterion = "0.8"
tempfile = "3.15"

[build-dependencies]
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }
# cc is used by build.rs to compile camera_objc.m when the `camera` feature is enabled.
cc = "1.2"

[[bench]]
name = "element_access"
harness = false

[lints.rust]
# objc 0.2's sel_impl macro emits `cfg(cargo-clippy)` checks that Rust 1.80+
# flags as unexpected_cfgs.  objc 0.2.7 is the final release in that series
# and the fix lives upstream; suppress at workspace level until cocoa/objc deps
# migrate to objc2.
unexpected_cfgs = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
