[package]
name = "axterminator"
version = "0.9.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Mikko Parkkola <mikko.parkkola@iki.fi>"]
description = "macOS GUI testing framework with background testing, sub-millisecond element access, and self-healing locators"
homepage = "https://mikkoparkkola.github.io/axterminator/"
license-file = "LICENSE.md"
repository = "https://github.com/MikkoParkkola/axterminator"
documentation = "https://github.com/MikkoParkkola/axterminator#readme"
readme = "README.md"
keywords = ["macos", "gui", "testing", "accessibility", "automation"]
categories = ["development-tools::testing", "gui", "os::macos-apis"]
[workspace]
members = [
    "crates/axterminator-core",
]
resolver = "2"

exclude = [
    ".claude/",
    ".github/",
    ".venv/",
    "__pycache__/",
    "docs/",
    "tests/",
    "benches/",
    "examples/",
    "browser-extension/",
    "demo/",
    "EspressoMacSDK/",
    "AGENTS.md",
    "CLAUDE.md",
    "mkdocs.yml",
    "uv.lock",
]

[lib]
name = "axterminator"
crate-type = ["rlib"]

[[bin]]
name = "axterminator"
path = "src/bin/axterminator.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete"]
# spaces: virtual desktop management via CGSSpace private SPI.
# Off by default — private API, macOS 14+ tested, incompatible with App Store.
spaces = []
# http-transport: Streamable HTTP + SSE transport (axum, tokio-stream).
# Feature-gated to keep the default CLI binary lean.
http-transport = ["dep:axum", "dep:tokio-stream"]
# audio: on-device audio capture, speech recognition, and TTS via CoreAudio /
# Speech.framework / AVFoundation.  Off by default to avoid triggering macOS
# TCC permission dialogs for users who do not need audio capabilities.
audio = []
# camera: single-frame AVFoundation capture + on-device Vision gesture detection.
# Compiles src/camera_objc.m and links AVFoundation, Vision, CoreImage, ImageIO,
# CoreMedia, CoreVideo.  Off by default — enables only when camera input is needed
# to avoid triggering TCC permission dialogs on first run.
camera = []
# watch: continuous background monitoring — audio VAD + camera gesture detection.
# Pushes events to Claude Code sessions via MCP notifications/claude/channel.
# Implies audio + camera + tokio/time. Off by default.
watch = ["audio", "camera", "dep:tokio-util"]
# context: geolocation via CoreLocation. Off by default — requires Location Services
# TCC permission. System context (battery, volume, dark mode, etc.) and clipboard
# are always available without this feature flag.
context = []
# docker: Neko browser containers as isolated test targets via Docker CLI.
# Exposes ax_browser_launch and ax_browser_stop MCP tools.
# Off by default — requires Docker daemon; not needed for native-app testing.
docker = []
# parakeet: NVIDIA Parakeet TDT 0.6B v3 ONNX Runtime ASR backend.
# Provides high-quality multilingual (25 European languages) speech-to-text as
# an optional engine alongside SFSpeechRecognizer.  Requires the `audio` feature.
# Model files (~2.5 GB) must be downloaded separately:
#   huggingface-cli download istupakov/parakeet-tdt-0.6b-v3-onnx \
#     encoder-model.onnx encoder-model.onnx.data decoder_joint-model.onnx \
#     nemo128.onnx vocab.txt config.json \
#     --local-dir ~/.axterminator/models/parakeet-tdt-0.6b-v3
# The `ort` crate uses pre-built ONNX Runtime binaries (no manual SDK install).
parakeet = ["audio", "dep:ort"]

[dependencies]
# CLI (feature-gated so it's only compiled for the binary target)
clap = { version = "4.5", features = ["derive", "wrap_help", "env"], optional = true }
clap_complete = { version = "4.6", optional = true }

# Parakeet ASR (feature-gated): ONNX Runtime for Parakeet TDT 0.6B v3 inference.
# `download-binaries` fetches pre-built ONNX Runtime libs at build time — no
# manual installation required.  Zero impact on binary size when disabled.
ort = { version = "2.0.0-rc.12", optional = true, features = ["download-binaries"] }

# Random token/password generation
rand = "0.10"

# HTTP transport (feature-gated)
axum = { version = "0.8", features = ["http1", "http2", "json", "tokio"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Base64 encoding for screenshot data
base64 = "0.22"

# macOS accessibility
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = { version = "0.25", features = ["elcapitan", "highsierra"] }
core-graphics-types = "0.2"

# macOS specific
objc = "0.2"
cocoa = "0.26"
block = "0.1"

# Async runtime
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
# CancellationToken for cooperative task shutdown (watch feature)
tokio-util = { version = "0.7", features = ["rt"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Caching
lru = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket for Chrome DevTools Protocol
tungstenite = "0.29"

# Process inspection
sysinfo = "0.38"

# URL parsing
url = "2.5"

# Temporary files for screenshot capture paths passed to macOS `screencapture`.
tempfile = "3.15"

# Hashing for tree comparison
ahash = "0.8"

# Regex for query parsing
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
criterion = "0.8"
toml = "1.1"

[build-dependencies]
# cc is used by build.rs to compile camera_objc.m when the `camera` feature is enabled.
cc = "1.2"

[[bench]]
name = "element_access"
harness = false

[[bench]]
name = "ax_vs_vision"
harness = false

[lints.rust]
# objc 0.2's sel_impl macro emits `cfg(cargo-clippy)` checks that Rust 1.80+
# flags as unexpected_cfgs.  objc 0.2.7 is the final release in that series
# and the fix lives upstream; suppress at workspace level until cocoa/objc deps
# migrate to objc2.
unexpected_cfgs = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
