[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "axterminator"
version = "0.1.0"
description = "World's most superior macOS GUI testing framework with background testing"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Mikko", email = "mikko@broa.biz" }]
requires-python = ">=3.9"
keywords = ["macos", "gui", "testing", "accessibility", "automation", "background"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/mikko/axterminator"
Documentation = "https://github.com/mikko/axterminator#readme"
Repository = "https://github.com/mikko/axterminator"
Issues = "https://github.com/mikko/axterminator/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "axterminator"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
