[package]
name = "axterminator-core"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Parkkola <mikko.parkkola@iki.fi>"]
description = "macOS GUI automation core library — sub-millisecond AX element access"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/MikkoParkkola/axterminator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
